plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.jetbrains.kotlin.jvm'
}

group = 'com.fitpet'
version = '0.0.1-SNAPSHOT'

java {
    toolchain { languageVersion = JavaLanguageVersion.of(17) }
}

configurations {
    compileOnly { extendsFrom annotationProcessor }
}

repositories {
    google()
    mavenCentral()
}

dependencies {
    // Web (MVC)
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Database
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testImplementation 'com.h2database:h2'

    // Security & JWT
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // OAuth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.23.0'
    implementation 'com.google.api-client:google-api-client:1.34.1'
    implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // WebClient 사용을 위한 WebFlux 모듈 (서버 기능 제외)
    implementation 'org.springframework:spring-webflux'

    // Monitoring
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Logback expression filters
    implementation 'org.codehaus.janino:janino:3.1.12'

    // Validation & AOP
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'jakarta.validation:jakarta.validation-api'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // Dotenv
    runtimeOnly 'me.paulschwarz:spring-dotenv:3.0.0'

    // Lombok & MapStruct
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // Configuration Processor
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // Swagger (OpenAPI)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // DevTools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // S3
    implementation platform('software.amazon.awssdk:bom:2.20.41')
    implementation 'software.amazon.awssdk:s3'

    //FCM
    implementation 'com.google.firebase:firebase-admin:9.3.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"

    // GCP
    implementation "com.google.cloud.sql:mysql-socket-factory-connector-j-8:1.27.1"

}

tasks.named('test') { useJUnitPlatform() }
